--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,22 @@ env:
   GKE_ZONE: us-central1-c
   GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  SPRING_R2DBC_PASSWORD: ${{ secrets.SPRING_R2DBC_PASSWORD }}
+  SPRING_R2DBC_URL: ${{ secrets.SPRING_R2DBC_URL }}
+  SPRING_R2DBC_USERNAME: ${{ secrets.SPRING_R2DBC_USERNAME }}
+  SPRING_RABBITMQ_HOST: ${{ secrets.SPRING_RABBITMQ_HOST }}
+  SPRING_RABBITMQ_PASSWORD: ${{ secrets.SPRING_RABBITMQ_PASSWORD }}
+  SPRING_RABBITMQ_PORT: ${{ secrets.SPRING_RABBITMQ_PORT }}
+  SPRING_RABBITMQ_USERNAME: ${{ secrets.SPRING_RABBITMQ_USERNAME }}
+  SPRING_RABBITMQ_VIRTUAL_HOST: ${{ secrets.SPRING_RABBITMQ_VIRTUAL_HOST }}
+  TWITTER_APP_CLIENT_ID: ${{ secrets.TWITTER_APP_CLIENT_ID }}
+  TWITTER_APP_CLIENT_SECRET: ${{ secrets.TWITTER_APP_CLIENT_SECRET }}
+  TWITTER_CLIENTS_0_CLIENT_ID: ${{ secrets.TWITTER_CLIENTS_0_CLIENT_ID }}
+  TWITTER_CLIENTS_0_SECRET: ${{ secrets.TWITTER_CLIENTS_0_SECRET }}
+  TWITTER_CLIENTS_1_CLIENT_ID: ${{ secrets.TWITTER_CLIENTS_1_CLIENT_ID }}
+  TWITTER_CLIENTS_1_SECRET: ${{ secrets.TWITTER_CLIENTS_1_SECRET }}
+  TWITTER_ENCRYPTION_PASSWORD: ${{ secrets.TWITTER_ENCRYPTION_PASSWORD }}
+  TWITTER_ENCRYPTION_SALT: ${{ secrets.TWITTER_ENCRYPTION_SALT }}
 
 on:
   push:
