--- a/deploy/k8s/deployment.yaml
+++ b/deploy/k8s/deployment.yaml
@@ -15,100 +15,9 @@ spec:
         app: twitter
     spec:
       containers:
-        - image: gcr.io/bootiful/twitter
+        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
           imagePullPolicy: Always
           name: twitter
-          env:
-            - name: LANG
-              value: "en_US.UTF-8"
-            - name: SPRING_R2DBC_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_R2DBC_PASSWORD
-            - name: SPRING_R2DBC_URL
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_R2DBC_URL
-            - name: SPRING_R2DBC_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_R2DBC_USERNAME
-            - name: SPRING_RABBITMQ_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_RABBITMQ_HOST
-            - name: SPRING_RABBITMQ_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_RABBITMQ_PASSWORD
-            - name: SPRING_RABBITMQ_PORT
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_RABBITMQ_PORT
-            - name: SPRING_RABBITMQ_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_RABBITMQ_USERNAME
-            - name: SPRING_RABBITMQ_VIRTUAL_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: SPRING_RABBITMQ_VIRTUAL_HOST
-            - name: TWITTER_APP_CLIENT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_APP_CLIENT_ID
-            - name: TWITTER_APP_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_APP_CLIENT_SECRET
-            - name: TWITTER_CLIENTS_0_CLIENT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_CLIENTS_0_CLIENT_ID
-            - name: TWITTER_CLIENTS_0_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_CLIENTS_0_SECRET
-            - name: TWITTER_CLIENTS_1_CLIENT_ID
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_CLIENTS_1_CLIENT_ID
-            - name: TWITTER_CLIENTS_1_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_CLIENTS_1_SECRET
-            - name: TWITTER_ENCRYPTION_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_ENCRYPTION_PASSWORD
-            - name: TWITTER_ENCRYPTION_SALT
-              valueFrom:
-                secretKeyRef:
-                  name: twitter-secrets
-                  key: TWITTER_ENCRYPTION_SALT
-          readinessProbe:
-            httpGet:
-              port: 8080
-              path: /actuator/health/readiness
-          livenessProbe:
-            httpGet:
-              port: 8080
-              path: /actuator/health/liveness
           ports:
             - containerPort: 8080
           resources:
