--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    ingress.kubernetes.io/force-ssl-redirect: "true"
-    networking.gke.io/managed-certificates: "twitter-certificate"
+#    ingress.kubernetes.io/force-ssl-redirect: "true"
+#    networking.gke.io/managed-certificates: "twitter-certificate"
     kubernetes.io/ingress.global-static-ip-name: "twitter-ip"
   name: twitter-ingress
 spec:
@@ -12,25 +12,3 @@ spec:
       name: twitter
       port:
         number: 80
-#  rules:
-#    - http:
-#        paths:
-#          - path: /testpath
-#            pathType: ImplementationSpecific
-#            backend:
-#              service:
-#                name: test
-#                port:
-#                  number: 80
-#spec:
-#  rules:
-#    - host: twitter.developeradvocacy.services
-#      http:
-#        paths:
-#          - pathType: ImplementationSpecific
-#            path: "/"
-#            backend:
-#              service:
-#                name: twitter
-#                port:
-#                  number: 80
