--- a/deploy/k8s/deployment.yaml
+++ b/deploy/k8s/deployment.yaml
@@ -15,7 +15,8 @@ spec:
         app: twitter
     spec:
       containers:
-        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
+        - image: gcr.io/bootiful/twitter
+#        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
           imagePullPolicy: Always
           name: twitter
           ports:
