--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-#    ingress.kubernetes.io/force-ssl-redirect: "true"
-#    networking.gke.io/managed-certificates: "twitter-certificate"
+    ingress.kubernetes.io/force-ssl-redirect: "true"
+    networking.gke.io/managed-certificates: "twitter-certificate"
     kubernetes.io/ingress.global-static-ip-name: "twitter-ip"
   name: twitter-ingress
 spec:
