--- a/deploy/k8s/deployment.yaml
+++ b/deploy/k8s/deployment.yaml
@@ -15,12 +15,15 @@ spec:
         app: twitter
     spec:
       containers:
-        - image: gcr.io/bootiful/twitter
-          #        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
+        - image: gcr.io/bootiful/joshlong-com-api
           imagePullPolicy: Always
-          name: twitter
-          ports:
-            - containerPort: 8080
+          name: api
+#        - image: gcr.io/bootiful/twitter
+#          #        - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
+#          imagePullPolicy: Always
+#          name: twitter
+#          ports:
+#            - containerPort: 8080
 
           startupProbe:
             httpGet:
@@ -40,8 +43,18 @@ spec:
               path: /actuator/health/liveness
 
           env:
+            - name: BLOG_INDEX_REBUILD_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: joshlong-com-api-secrets
+                  key: BLOG_INDEX_REBUILD_KEY
+            - name: BLOG_RESET_ON_REBUILD
+              value: "true"
+            - name: BLOG_API_SERVER_URI
+              value: "https://api.joshlong.com"
             - name: LANG
               value: "en_US.UTF-8"
+
             - name: SPRING_R2DBC_PASSWORD
               valueFrom:
                 secretKeyRef:
