--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,8 @@ spring.rabbitmq.password=password
 spring.security.oauth2.client.registration.twitter.client-id=${twitter.app.client-id}
 spring.security.oauth2.client.registration.twitter.client-secret=${twitter.app.client-secret}
 spring.security.oauth2.client.registration.twitter.scope=tweet.write,users.read,tweet.read,follows.read,offline.access
-spring.security.oauth2.client.registration.twitter.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.twitter.redirect-uri=https://twitter.developeradvocacy.services/{action}/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.twitter.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.twitter.authorization-grant-type=authorization_code
 spring.security.oauth2.client.provider.twitter.authorization-uri=https://twitter.com/i/oauth2/authorize
 spring.security.oauth2.client.provider.twitter.token-uri=https://api.twitter.com/2/oauth2/token
