--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.security.oauth2.client.provider.twitter.authorization-uri=https://twitter
 spring.security.oauth2.client.provider.twitter.token-uri=https://api.twitter.com/2/oauth2/token
 spring.security.oauth2.client.provider.twitter.user-info-uri=https://api.twitter.com/2/users/me
 spring.security.oauth2.client.provider.twitter.user-name-attribute=data
+server.forward-headers-strategy=framework
 
 ## logging
 logging.level.com.joshlong=debug
