unscheduled test works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ twitter.clients[1].secret=secret
 #### encryption for twitter registrations
 twitter.encryption.password=pw
 ##NB this needs to be a hex encoded value!
-twitter.encryption.salt=hex-encoded-value
+twitter.encryption.salt=6865782D656E636F6465642D76616C7565
 #### oauth app credentials
 twitter.app.client-secret=client-secret
 twitter.app.client-id=client-id
