e2e but encryption is broken

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ twitter.clients[0].secret=secret
 twitter.clients[1].client-id=springtips
 twitter.clients[1].secret=secret
 #### encryption for twitter registrations
-twitter.encryption.password=pw
+twitter.encryption.password=s1mpl3p@ssw0rd
 ##NB this needs to be a hex encoded value!
 twitter.encryption.salt=6865782D656E636F6465642D76616C7565
 #### oauth app credentials
