--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 ## TWITTER SERVICE CONFIGURATION FILE
 ##
 
+management.endpoints.web.exposure.include=health,info
+
 ### clients
 twitter.clients[0].client-id=bootiful-youtube-promoter
 twitter.clients[0].secret=secret
