--- a/deploy/k8s/deployment.yaml
+++ b/deploy/k8s/deployment.yaml
@@ -106,21 +106,36 @@ spec:
                 secretKeyRef:
                   name: twitter-secrets
                   key: TWITTER_CLIENTS_0_CLIENT_ID
-            - name: TWITTER_CLIENTS_0_SECRET
+            - name: TWITTER_CLIENTS_0_CLIENT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: twitter-secrets
-                  key: TWITTER_CLIENTS_0_SECRET
+                  key: TWITTER_CLIENTS_0_CLIENT_SECRET
+
             - name: TWITTER_CLIENTS_1_CLIENT_ID
               valueFrom:
                 secretKeyRef:
                   name: twitter-secrets
                   key: TWITTER_CLIENTS_1_CLIENT_ID
-            - name: TWITTER_CLIENTS_1_SECRET
+            - name: TWITTER_CLIENTS_1_CLIENT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: twitter-secrets
-                  key: TWITTER_CLIENTS_1_SECRET
+                  key: TWITTER_CLIENTS_1_CLIENT_SECRET
+
+
+            - name: TWITTER_CLIENTS_2_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: twitter-secrets
+                  key: TWITTER_CLIENTS_2_CLIENT_ID
+
+            - name: TWITTER_CLIENTS_2_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: twitter-secrets
+                  key: TWITTER_CLIENTS_2_CLIENT_SECRET
+
             - name: TWITTER_ENCRYPTION_PASSWORD
               valueFrom:
                 secretKeyRef:
