--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 ##
 ## TWITTER SERVICE CONFIGURATION FILE
 ##
-
 management.endpoints.web.exposure.include=health,info
-
 ### clients
-twitter.clients[0].client-id=bootiful-youtube-promoter
+twitter.clients[0].client-id=youtube
 twitter.clients[0].secret=secret
 twitter.clients[1].client-id=springtips
 twitter.clients[1].secret=secret
+twitter.clients[2].client-id=spring-blog
+twitter.clients[2].secret=secret
 #### encryption for twitter registrations
 twitter.encryption.password=s1mpl3p@ssw0rd
 ##NB this needs to be a hex encoded value!
@@ -16,23 +16,19 @@ twitter.encryption.salt=6865782D656E636F6465642D76616C7565
 #### oauth app credentials
 twitter.app.client-secret=client-secret
 twitter.app.client-id=client-id
-
 ## sql
 spring.r2dbc.url=r2dbc:postgres://localhost/postgres
 spring.r2dbc.username=postgres
 spring.r2dbc.password=postgres
 spring.sql.init.mode=always
-
 ## stream
 spring.cloud.stream.bindings.twitterRequests-in-0.destination=twitter-requests
 spring.cloud.stream.bindings.twitterRequests-out-0.destination=twitter-requests
-
 ## rabbitmq
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
-
 ## security
 spring.security.oauth2.client.registration.twitter.client-id=${twitter.app.client-id}
 spring.security.oauth2.client.registration.twitter.client-secret=${twitter.app.client-secret}
@@ -44,10 +40,8 @@ spring.security.oauth2.client.provider.twitter.token-uri=https://api.twitter.com
 spring.security.oauth2.client.provider.twitter.user-info-uri=https://api.twitter.com/2/users/me
 spring.security.oauth2.client.provider.twitter.user-name-attribute=data
 server.forward-headers-strategy=framework
-
 ## logging
 logging.level.com.joshlong=debug
-
 #---
 spring.config.activate.on-profile=production
 spring.security.oauth2.client.registration.twitter.redirect-uri=https://twitter.developeradvocacy.services/{action}/oauth2/code/{registrationId}
