--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 ##
 management.endpoints.web.exposure.include=health,info
 ### clients
-twitter.clients[0].client-id=youtube
+twitter.clients[0].id=youtube
 twitter.clients[0].secret=secret
-twitter.clients[1].client-id=springtips
+twitter.clients[1].id=springtips
 twitter.clients[1].secret=secret
-twitter.clients[2].client-id=spring-blog
+twitter.clients[2].id=spring-blog
 twitter.clients[2].secret=secret
 #### encryption for twitter registrations
 twitter.encryption.password=s1mpl3p@ssw0rd
