--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,10 @@ env:
   TWITTER_ENCRYPTION_PASSWORD: ${{ secrets.TWITTER_ENCRYPTION_PASSWORD }}
   TWITTER_ENCRYPTION_SALT: ${{ secrets.TWITTER_ENCRYPTION_SALT }}
 
+  # artifactory
+  ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
+  ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+
 on:
   push:
     branches: [ main ]
