new media types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,6 @@ twitter.encryption.salt=6865782D656E636F6465642D76616C7565
 #### oauth app credentials
 twitter.app.client-secret=client-secret
 twitter.app.client-id=client-id
-
-
 ## sql
 spring.r2dbc.url=r2dbc:postgres://localhost/postgres
 spring.r2dbc.username=postgres
@@ -31,10 +29,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
-
 server.forward-headers-strategy=framework
 ## logging
 logging.level.com.joshlong=debug
 #---
 spring.config.activate.on-profile=production
-spring.security.oauth2.client.registration.twitter.redirect-uri=https://twitter.developeradvocacy.services/{action}/oauth2/code/{registrationId}
+#spring.security.oauth2.client.registration.twitter.redirect-uri=https://twitter.developeradvocacy.services/{action}/oauth2/code/{registrationId}
