--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,12 +67,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - uses: joshlong/java-version-export-github-action@v17
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v1
         with:
-          java-version: 17
-
+          java-version: ${{ env.JAVA_MAJOR_VERSION }}
 
       - name: Deploy Site
         run: |
