--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.0.2</version>
+        <relativePath/>
     </parent>
     <properties>
-        <spring-cloud.version>2022.0.0</spring-cloud.version>
+        <spring-cloud.version>2022.0.1</spring-cloud.version>
         <java.version>17</java.version>
     </properties>
     <dependencies>
